--- a/index.html
+++ b/index.html
@@ -4,64 +4,82 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайту-->
-    <header>
-      <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="page-header">
+      <nav class="nav">
+        <a class="logo link" href="./index.html">
+          <span class="part-logo">Web</span>Studio
+        </a>
+        <ul class="menu list">
+          <li><a class="menu-item link" href="">Studio</a></li>
+          <li>
+            <a class="menu-item link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="menu-item link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <!-- HERO -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-caption">
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button class="btn-order" type="button">Order Service</button>
       </section>
       <!-- Наші переваги -->
       <section>
         <h2 hidden>Our advantages</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -70,8 +88,8 @@
       </section>
       <!-- Що ми робимо -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="section-heading">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/what-are-we-doing/pc.jpg"
@@ -99,55 +117,57 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="section-heading">Our Team</h2>
+        <ul class="list">
+          <li class="holder">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="description">Product Designer</p>
           </li>
-          <li>
+          <li class="holder">
             <img
               src="./images/team/tom-ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="holder">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="description">Marketing</p>
           </li>
-          <li>
+          <li class="holder">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html"
+        ><span class="part-logo">Web</span>studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
