--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!--Шапка сайту-->
     <header class="page-header">
       <nav class="nav">
-        <a class="logo link" href="./index.html">
-          <span class="part-logo">Web</span>Studio
-        </a>
+        <a class="logo link" href="./index.html"
+          >Web <span class="logo-part">Studio</span></a
+        >
         <ul class="menu list">
           <li><a class="menu-item link" href="">Studio</a></li>
           <li>
@@ -164,11 +164,11 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="container-footer">
       <a class="logo link" href="./index.html"
-        ><span class="part-logo">Web</span>studio</a
-      >
-      <p>
+        >Web<span class="logo-footer">studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
