--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
   <body>
     <!--Шапка сайту-->
     <header>
-      <nav>
+      <nav class="nav">
         <a class="logo link" href="./index.html"
-          ><span class="part-logo">Web</span>Studio
-        </a>
+          >Web <span class="logo-part">Studio</span></a
+        >
         <ul class="list">
           <li><a class="menu-item link" href="./index.html">Studio</a></li>
           <li><a class="menu-item link" href="">Portfolio</a></li>
@@ -44,11 +44,11 @@
     <main>
       <!-- Кнопки для фільтрації -->
       <ul class="list">
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li><button class="filter-buttons" type="button">All</button></li>
+        <li><button class="filter-buttons" type="button">Web Site</button></li>
+        <li><button class="filter-buttons" type="button">App</button></li>
+        <li><button class="filter-buttons" type="button">Design</button></li>
+        <li><button class="filter-buttons" type="button">Marketing</button></li>
       </ul>
       <!-- Види робіт -->
       <h1 hidden>Examples of our work</h1>
@@ -60,8 +60,8 @@
             width="360"
             height="300"
           />
-          <h2>Banking App Interface Concept</h2>
-          <p>App</p>
+          <h2 class="work-title">Banking App Interface Concept</h2>
+          <p class="work-desc">App</p>
         </li>
         <li>
           <img
@@ -70,8 +70,8 @@
             width="360"
             height="300"
           />
-          <h2>Cashless Payment</h2>
-          <p>Marketing</p>
+          <h2 class="work-title">Cashless Payment</h2>
+          <p class="work-desc">Marketing</p>
         </li>
         <li>
           <img
@@ -80,8 +80,8 @@
             width="360"
             height="300"
           />
-          <h2>Meditation App</h2>
-          <p>App</p>
+          <h2 class="work-title">Meditation App</h2>
+          <p class="work-desc">App</p>
         </li>
         <li>
           <img
@@ -90,8 +90,8 @@
             width="360"
             height="300"
           />
-          <h2>Taxi Service</h2>
-          <p>Marketing</p>
+          <h2 class="work-title">Taxi Service</h2>
+          <p class="work-desc">Marketing</p>
         </li>
         <li>
           <img
@@ -100,8 +100,8 @@
             width="360"
             height="300"
           />
-          <h2>Screen Illustrations</h2>
-          <p>Design</p>
+          <h2 class="work-title">Screen Illustrations</h2>
+          <p class="work-desc">Design</p>
         </li>
         <li>
           <img
@@ -110,8 +110,8 @@
             width="360"
             height="300"
           />
-          <h2>Online Courses</h2>
-          <p>Marketing</p>
+          <h2 class="work-title">Online Courses</h2>
+          <p class="work-desc">Marketing</p>
         </li>
         <li>
           <img
@@ -120,8 +120,8 @@
             width="360"
             height="300"
           />
-          <h2>Instagram Stories Concept</h2>
-          <p>Design</p>
+          <h2 class="work-title">Instagram Stories Concept</h2>
+          <p class="work-desc">Design</p>
         </li>
         <li>
           <img
@@ -130,8 +130,8 @@
             width="360"
             height="300"
           />
-          <h2>Organic Food</h2>
-          <p>Web Site</p>
+          <h2 class="work-title">Organic Food</h2>
+          <p class="work-desc">Web Site</p>
         </li>
         <li>
           <img
@@ -140,17 +140,17 @@
             width="360"
             height="300"
           />
-          <h2>Fresh Coffee</h2>
-          <p>Web Site</p>
+          <h2 class="work-title">Fresh Coffee</h2>
+          <p class="work-desc">Web Site</p>
         </li>
       </ul>
     </main>
     <!-- Футер -->
-    <footer>
-      <a class="logo link" href="./index.html"
-        ><span class="part-logo">Web</span>studio</a
-      >
-      <p>
+    <footer class="container-footer">
+      <a class="logo link" href="./index.html">
+        Web <span class="logo-footer">studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
