--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           >Web <span class="logo-part">Studio</span></a
         >
         <ul class="menu list">
-          <li><a class="menu-item link" href="">Studio</a></li>
+          <li><a class="menu-item link" href="./index.html">Studio</a></li>
           <li>
             <a class="menu-item link" href="./portfolio.html">Portfolio</a>
           </li>
           <li><a class="menu-item link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contact-info">
         <ul class="list">
           <li>
             <a class="contact link" href="mailto:info@devstudio.com"
@@ -54,7 +54,7 @@
       </section>
       <!-- Наші переваги -->
       <section>
-        <h2 hidden>Our advantages</h2>
+        <h2 class="section-advantages" hidden>Our advantages</h2>
         <ul class="list">
           <li>
             <h3 class="title">Strategy</h3>
