--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,13 @@
         >
         <ul class="list">
           <li><a class="menu-item link" href="./index.html">Studio</a></li>
-          <li><a class="menu-item link" href="">Portfolio</a></li>
+          <li>
+            <a class="menu-item link" href="./portfolio.html">Portfolio</a>
+          </li>
           <li><a class="menu-item link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contact-info">
         <ul class="list">
           <li>
             <a class="contact link" href="mailto:info@devstudio.com"
@@ -42,108 +44,114 @@
       </address>
     </header>
     <main>
-      <!-- Кнопки для фільтрації -->
-      <ul class="list">
-        <li><button class="filter-buttons" type="button">All</button></li>
-        <li><button class="filter-buttons" type="button">Web Site</button></li>
-        <li><button class="filter-buttons" type="button">App</button></li>
-        <li><button class="filter-buttons" type="button">Design</button></li>
-        <li><button class="filter-buttons" type="button">Marketing</button></li>
-      </ul>
-      <!-- Види робіт -->
-      <h1 hidden>Examples of our work</h1>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/examples-of-our-work/banking-app.jpg"
-            alt="Banking App"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Banking App Interface Concept</h2>
-          <p class="work-desc">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/cashless-payment.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Cashless Payment</h2>
-          <p class="work-desc">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/meditation-app.jpg"
-            alt="meditation app"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Meditation App</h2>
-          <p class="work-desc">App</p>
-        </li>
-        <li>
-          <img
-            src="/images/examples-of-our-work/taxi-service.jpg"
-            alt="Taxi Service"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Taxi Service</h2>
-          <p class="work-desc">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/screen-illustrations.jpg"
-            alt="Screen Illustrations"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Screen Illustrations</h2>
-          <p class="work-desc">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/online-courses.jpg"
-            alt="Online Courses"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Online Courses</h2>
-          <p class="work-desc">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/instagram-stories-concept.jpg"
-            alt="Design for Instagram"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Instagram Stories Concept</h2>
-          <p class="work-desc">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/organic-food.jpg"
-            alt="Organic food"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Organic Food</h2>
-          <p class="work-desc">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/examples-of-our-work/fresh-coffee.jpg"
-            alt="Coffee"
-            width="360"
-            height="300"
-          />
-          <h2 class="work-title">Fresh Coffee</h2>
-          <p class="work-desc">Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <!-- Кнопки для фільтрації -->
+        <ul class="list">
+          <li><button class="filter-buttons" type="button">All</button></li>
+          <li>
+            <button class="filter-buttons" type="button">Web Site</button>
+          </li>
+          <li><button class="filter-buttons" type="button">App</button></li>
+          <li><button class="filter-buttons" type="button">Design</button></li>
+          <li>
+            <button class="filter-buttons" type="button">Marketing</button>
+          </li>
+        </ul>
+        <!-- Види робіт -->
+        <h1 hidden>Examples of our work</h1>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/examples-of-our-work/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Banking App Interface Concept</h2>
+            <p class="work-desc">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Cashless Payment</h2>
+            <p class="work-desc">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/meditation-app.jpg"
+              alt="meditation app"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Meditation App</h2>
+            <p class="work-desc">App</p>
+          </li>
+          <li>
+            <img
+              src="/images/examples-of-our-work/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Taxi Service</h2>
+            <p class="work-desc">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Screen Illustrations</h2>
+            <p class="work-desc">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Online Courses</h2>
+            <p class="work-desc">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/instagram-stories-concept.jpg"
+              alt="Design for Instagram"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Instagram Stories Concept</h2>
+            <p class="work-desc">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/organic-food.jpg"
+              alt="Organic food"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Organic Food</h2>
+            <p class="work-desc">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-our-work/fresh-coffee.jpg"
+              alt="Coffee"
+              width="360"
+              height="300"
+            />
+            <h2 class="work-title">Fresh Coffee</h2>
+            <p class="work-desc">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Футер -->
     <footer class="container-footer">
