--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
         <!-- Види робіт -->
 
         <ul class="list">
-          <li>
+          <li class="link">
             <img
               src="./images/examples-of-our-work/banking-app.jpg"
               alt="Banking App"
