--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,8 @@
         <!-- Види робіт -->
 
         <ul class="list">
-          <li class="link">
+          <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/banking-app.jpg"
               alt="Banking App"
@@ -72,6 +73,7 @@
             <p class="work-desc">App</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/cashless-payment.jpg"
               alt="Cashless Payment"
@@ -82,6 +84,7 @@
             <p class="work-desc">Marketing</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/meditation-app.jpg"
               alt="meditation app"
@@ -92,6 +95,7 @@
             <p class="work-desc">App</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="/images/examples-of-our-work/taxi-service.jpg"
               alt="Taxi Service"
@@ -102,6 +106,7 @@
             <p class="work-desc">Marketing</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/screen-illustrations.jpg"
               alt="Screen Illustrations"
@@ -112,6 +117,7 @@
             <p class="work-desc">Design</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/online-courses.jpg"
               alt="Online Courses"
@@ -122,6 +128,7 @@
             <p class="work-desc">Marketing</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/instagram-stories-concept.jpg"
               alt="Design for Instagram"
@@ -132,6 +139,7 @@
             <p class="work-desc">Design</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/organic-food.jpg"
               alt="Organic food"
@@ -142,6 +150,7 @@
             <p class="work-desc">Web Site</p>
           </li>
           <li>
+            <a class="link" href=""></a>
             <img
               src="./images/examples-of-our-work/fresh-coffee.jpg"
               alt="Coffee"
