--- a/portfolio.html
+++ b/portfolio.html
@@ -62,101 +62,101 @@
 
         <ul class="list">
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Banking App Interface Concept</h2>
             <p class="work-desc">App</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Cashless Payment</h2>
             <p class="work-desc">Marketing</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/meditation-app.jpg"
-              alt="meditation app"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/meditation-app.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Meditation App</h2>
             <p class="work-desc">App</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="/images/examples-of-our-work/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="/images/examples-of-our-work/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Taxi Service</h2>
             <p class="work-desc">Marketing</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Screen Illustrations</h2>
             <p class="work-desc">Design</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Online Courses</h2>
             <p class="work-desc">Marketing</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/instagram-stories-concept.jpg"
-              alt="Design for Instagram"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/instagram-stories-concept.jpg"
+                alt="Design for Instagram"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Instagram Stories Concept</h2>
             <p class="work-desc">Design</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/organic-food.jpg"
-              alt="Organic food"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/organic-food.jpg"
+                alt="Organic food"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Organic Food</h2>
             <p class="work-desc">Web Site</p>
           </li>
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/examples-of-our-work/fresh-coffee.jpg"
-              alt="Coffee"
-              width="360"
-              height="300"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/examples-of-our-work/fresh-coffee.jpg"
+                alt="Coffee"
+                width="360"
+                height="300"
+            /></a>
             <h2 class="work-title">Fresh Coffee</h2>
             <p class="work-desc">Web Site</p>
           </li>
