--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,10 @@
                 alt="Banking App"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Banking App Interface Concept</h2>
-            <p class="work-desc">App</p>
+              />
+              <h2 class="work-title">Banking App Interface Concept</h2>
+              <p class="work-desc">App</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -79,9 +80,10 @@
                 alt="Cashless Payment"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Cashless Payment</h2>
-            <p class="work-desc">Marketing</p>
+              />
+              <h2 class="work-title">Cashless Payment</h2>
+              <p class="work-desc">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -90,9 +92,10 @@
                 alt="meditation app"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Meditation App</h2>
-            <p class="work-desc">App</p>
+              />
+              <h2 class="work-title">Meditation App</h2>
+              <p class="work-desc">App</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -101,9 +104,10 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Taxi Service</h2>
-            <p class="work-desc">Marketing</p>
+              />
+              <h2 class="work-title">Taxi Service</h2>
+              <p class="work-desc">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -112,9 +116,10 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Screen Illustrations</h2>
-            <p class="work-desc">Design</p>
+              />
+              <h2 class="work-title">Screen Illustrations</h2>
+              <p class="work-desc">Design</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -123,9 +128,10 @@
                 alt="Online Courses"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Online Courses</h2>
-            <p class="work-desc">Marketing</p>
+              />
+              <h2 class="work-title">Online Courses</h2>
+              <p class="work-desc">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -134,9 +140,10 @@
                 alt="Design for Instagram"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Instagram Stories Concept</h2>
-            <p class="work-desc">Design</p>
+              />
+              <h2 class="work-title">Instagram Stories Concept</h2>
+              <p class="work-desc">Design</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -145,9 +152,10 @@
                 alt="Organic food"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Organic Food</h2>
-            <p class="work-desc">Web Site</p>
+              />
+              <h2 class="work-title">Organic Food</h2>
+              <p class="work-desc">Web Site</p></a
+            >
           </li>
           <li>
             <a class="link" href="">
@@ -156,9 +164,10 @@
                 alt="Coffee"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="work-title">Fresh Coffee</h2>
-            <p class="work-desc">Web Site</p>
+              />
+              <h2 class="work-title">Fresh Coffee</h2>
+              <p class="work-desc">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
