--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     </main>
     <!-- Футер -->
     <footer class="container-footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-footer">studio</span>
-      </a>
+      <a class="bottom-logo link" href="./index.html">
+        <span class="part-logo">Web</span>studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
