--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/examples-of-our-work/taxi-service.jpg"
+                src="./images/examples-of-our-work/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
@@ -174,9 +174,9 @@
     </main>
     <!-- Футер -->
     <footer class="container-footer">
-      <a class="logo link" href="./index.html">
-        Web <span class="logo-footer">studio</span>
-      </a>
+      <a class="bottom-logo link" href="./index.html">
+        <span class="part-logo">Web</span>studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
