--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <!-- Футер -->
     <footer class="container-footer">
       <a class="bottom-logo link" href="./index.html">
-        <span class="part-logo">Web</span>studio</a
-      >
+        Web <span class="part-logo">studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
