--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
     <!-- Футер -->
     <footer class="container-footer">
       <a class="bottom-logo link" href="./index.html">
-        Web <span class="part-logo">studio</span>
+        Web <span class="part-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
